:fix: defer dark mode script

--- a/style.css
+++ b/style.css
@@ -20,16 +20,21 @@
     --dark-text-color: #FFFFFF;
     --dark-secondary-text-color: #888888;
 
-    --dark-bg-color: #111111;
-    --dark-bg-secondary-color: #222222;
+    --dark-bg-color: #222222;
+    --dark-bg-secondary-color: #333333;
 
     --dark-button-primary-text: var(--dark-text-color);
     --dark-button-primary-bg-color: #443355;
-    --dark-button-primary-hover-bg-color: #AAAADD;
-    --dark-button-primary-active-bg-color: #9988DD;
+    --dark-button-primary-hover-bg-color: #331144;
+    --dark-button-primary-active-bg-color: #330033;
 
-    --dark-anchor-text-color: #2222DD;
+    --dark-anchor-text-color: #5555FF;
     --dark-anchor-clicked-text-color: #7722AA;
+}
+
+*
+{
+    box-sizing: border-box;
 }
 
 body 
@@ -77,7 +82,6 @@ body.dark-mode
 body>*
 {
     padding: 2vh 4vw;
-    box-sizing: border-box;
 }
 
 
@@ -85,6 +89,7 @@ body>*
 nav
 {
     background-color: var(--secondary-bg-color);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 
     position: sticky;
     top: 0; left: 0;
@@ -92,7 +97,7 @@ nav
 
 header
 {
-    margin: 120px, 0px;
+    margin: 60px 0px;
 }
 
 
@@ -102,7 +107,7 @@ button
     padding: 1vh 2vw;
     border: 1px solid var(--text-color);
 
-    transition-duration: 200ms;
+    transition: color 200ms;
 }
 
 a:link
